# SpaceshipGenerator

./: .flake8  .gitignore  MANIFEST.in  README.md  __init__.py  build.py  pyproject.toml  sitecustomize.py
docs/: USAGE.md
spaceship_generator/: __init__.py  generator.py  geometry.py  materials.py  utils.py
tests/: conftest.py  test_generator.py  test_geometry.py  test_import.py
