[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpaceshipGenerator"
version = "1.1.3"
description = "Blender add-on that procedurally generates 3D spaceships"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Michael Davies"}]
license = {text = "MIT"}

[tool.setuptools]
packages = ["spaceship_generator"]
include-package-data = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

